<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindBloodDonors</string>
<<<<<<< HEAD
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_invite">Invite Friends</string>
    <string name="action_share">Share</string>
    <string name="create_group">Create Group</string>
    <string name="action_profile">Profile</string>
    <string name="action_preference">Preference</string>
    <string name="title_activity_plot_location">PlotLocationActivity</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_help">HelpActivity</string>
=======
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
>>>>>>> 97c0f1001391687a06a8692483997e424ff3cc93

</resources>
