<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amarlabs.findblooddonors.HomeActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_invite"
        android:orderInCategory="100"
        android:title="@string/action_invite"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/create_group"
        android:orderInCategory="100"
        android:title="@string/create_group"
        app:showAsAction="never"/>
    
</menu>
